Update GitHub Action

--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -41,7 +41,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>6</string>
 	<key>FacebookAppID</key>
 	<string></string>
 	<key>FacebookClientToken</key>
