--- a/CardinalKit-Example/Podfile
+++ b/CardinalKit-Example/Podfile
@@ -13,8 +13,11 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+    if target.respond_to?(:product_type) and target.product_type == "com.apple.product-type.bundle"
+      target.build_configurations.each do |config|
+          config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+          config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+      end
     end
   end
 end
