Update podSpec use GranolaAlternova

--- a/CardinalKit-Example/Podfile
+++ b/CardinalKit-Example/Podfile
@@ -5,7 +5,8 @@ target 'CardinalKit_Example' do
   
   # CK Sample Pods
   pod 'ResearchKit', :git => 'https://github.com/ResearchKit/ResearchKit.git', :branch => 'master'
-  pod 'Granola', :git => 'https://github.com/CardinalKit/Granola.git', :branch => 'main'
+#  pod 'Granola', :git => 'https://github.com/CardinalKit/Granola.git', :branch => 'main'
+  pod 'GranolaAlternova'
   
   pod 'Firebase/Firestore'
   pod 'Firebase/Auth'
