--- a/CardinalKit-Example/Podfile
+++ b/CardinalKit-Example/Podfile
@@ -10,3 +10,12 @@ target 'CardinalKit_Example' do
   pod 'GoogleSignIn', '~> 6'
   pod 'FBSDKLoginKit', '~> 15'
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+        config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+        config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+    end
+  end
+end
