--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -101,7 +101,7 @@
 	<key>Passcode On Return Text</key>
 	<string>Welcome back!</string>
 	<key>Consent Title</key>
-	<string>Research Health Study Consent Form</string>
+	<string>Research Study Consent Form</string>
 	<key>Use CareKit</key>
 	<true/>
 	<key>Consent Form</key>
