--- a/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
+++ b/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0900"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -64,6 +64,12 @@
             ReferencedContainer = "container:CardinalKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:CardinalKit ExampleTests/CardinalKit-Example.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO">
