--- a/.github/workflows/beta-deployment.yml
+++ b/.github/workflows/beta-deployment.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   iosapptestflightdeployment:
     name: iOS App TestFlight Deployment
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1
@@ -24,6 +24,7 @@ jobs:
       run: |
           xcodebuild -version
           swift --version
+          pod --version
     - name: Install the Apple certificate and provisioning profile
       env:
         BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
