--- a/.github/workflows/beta-deployment.yml
+++ b/.github/workflows/beta-deployment.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   iosapptestflightdeployment:
     name: iOS App TestFlight Deployment
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1
